# format-hs

./: .gitignore  format-hs.cabal
src/: Main.hs
