name:                format-hs
version:             0.1.0.0
synopsis:            Auto-formatting tool for Show's default instance.
description:         Please see README.md
homepage:            https://github.com/rdnetto/format-hs
license:             Apache
license-file:        LICENSE
author:              Reuben D'Netto
maintainer:          rdnetto@gmail.com
copyright:           Copyright 2017
category:            Formatting
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable format-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base,
                       basic-prelude,
                       haskell-src,
                       text
  default-extensions:  NoImplicitPrelude,
                       OverloadedStrings,
                       ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/rdnetto/format-hs

